# public-PROD-SBER.Tech-worker-backend

./: .env  Dockerfile  compose.yaml  pyproject.toml
server/: .env  __main__.py  config.py
server/db/: models.py  repo.py  settings.py
server/domains/: appointments.py
server/routers/: routers.py
server/routers/schemas/: meet.py
